@@ -1,6 +1,9 @@
 cod-tools (unreleased)
 
-  * ...
+  * Fixed:
+    - codcif:
+        - conditional jump or move depends on uninitialised value in
+          starts_with_keyword() of common.c.
 
 cod-tools (3.10.0)
 
